crates/compiler/cypress/tests/snapshots/test_parse__multiline_string_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "a = \"Hello,\\n\\nWorld!\"\nb = \"\"\"Hello,\\n\\nWorld!\"\"\"\nc =\n    \"\"\"\n    Hello,\n\n    World!\n    \"\"\"\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            String=>String@2
        EndAssign)
        (BeginAssign
            Ident=>LowerIdent@3
            InlineAssign=>OpAssign@4
            String=>String@5
        EndAssign)
        (BeginAssign
            Ident=>LowerIdent@6
            InlineAssign=>OpAssign@7
            (BeginBlock HintExpr String=>String@8 EndBlock)
        EndAssign)
        HintExpr
        Num=>Int@9
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("a"), String("\"Hello,\\n\\nWorld!\""))
Assign(Ident("b"), String("\"\"\"Hello,\\n\\nWorld!\"\"\""))
Assign(Ident("c"), Block([String("\"\"\"\n    Hello,\n\n    World!\n    \"\"\"")]))
IntBase10("42")

[=== formatted below ===]

