crates/compiler/cypress/tests/snapshots/test_parse__multiline_string_in_apply_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "e\"\"\"\"\\\"\"\"\"\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineApply=>LowerIdent@0
            String=>String@1
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("e"), [String("\"\"\"\"\\\"\"\"\"")])

[=== formatted below ===]

