crates/compiler/cypress/tests/snapshots/test_parse__multiline_string_in_apply_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "e\n    \"\"\"\n    \"\\\"\n    \"\"\"\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineApply=>LowerIdent@0
            String=>String@1
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("e"), [String("\"\"\"\n    \"\\\"\n    \"\"\"")])

[=== formatted below ===]

