crates/compiler/cypress/tests/snapshots/test_parse__multiline_tuple_with_comments_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "(\n    #before 1\n    1\n    #after 1\n    ,\n    #before 2\n    2\n    #after 2\n    ,\n    #before 3\n    3\n    # after 3\n)\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens Num=>Int@1 Num=>Int@3 Num=>Int@5 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Tuple([IntBase10("1"), IntBase10("2"), IntBase10("3")])

[=== formatted below ===]

