crates/compiler/cypress/tests/snapshots/test_parse__multiline_type_signature_with_comment_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "f :# comment\n    {}\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            (BeginTypeRecord EndTypeRecord)
        EndTypeOrTypeAlias)
        HintExpr
        Num=>Int@4
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("f"), Record([]))
IntBase10("42")

[=== formatted below ===]

