crates/compiler/cypress/tests/snapshots/test_parse__multiple_ident.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: abc def ghi
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineApply=>LowerIdent@0
            Ident=>LowerIdent@1
            InlineApply=>LowerIdent@1
            Ident=>LowerIdent@2
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("abc"), [Ident("def"), Ident("ghi")])

[=== formatted below ===]

