crates/compiler/cypress/tests/snapshots/test_parse__multiple_operators_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "31*42+534\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            (* HintExpr Num=>Int@0 InlineBinOpStar=>OpStar@1 Num=>Int@2 EndBinOpStar)
            InlineBinOpPlus=>OpPlus@3
            Num=>Int@4
        EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(BinOp(IntBase10("31"), Star, IntBase10("42")), Plus, IntBase10("534"))

[=== formatted below ===]

